# phs_backend

./: .env  .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: rust.yml
.sqlx/: query-0ec98b2387cf4adb82d7e53e872ac97125444c84930bafd71cf1955d4bd93616.json  query-1b0c29bb0b7a4c410e126a025625641c7c642a9b75eadf6967a22159e626ee2d.json  query-24ac9cf96cbbaddf73e76e6f230b1d055274a16c007578569daf41de771711a5.json  query-284e3ef901e15adaf1b3264be93dd78da75ac992b4dae6c42ff9ee63a52fc23c.json  query-2d45cb571944022016c8d328f4b556a794a7191038bb023f491209d18c6d6678.json  query-341cd3c1a713e36f0d4f1c42ff35cf7a44e7cad89115116729ee1d95f6576ca7.json  query-34c16071a2a97193b9c835f19cf5ab07dbbf048cb2a6df7efd5ef3bb348e1369.json  query-3c051391e6fe8ebbf1efc54ec29f865fb5afa88fc3670bfc9359d7ec335b49ab.json  query-3c9d3d84c6c942b3d89df9c9d29e7910863404a0784f173e5d86d0a86e69a174.json  query-3e5e92ac6eb5744d738ba15451ed6d69cff702dacaabb993295bf9227a24dce0.json  query-3ed9fddec4a37351a50c76746f93e2f2a0dca000e9e41db47f23b97ef7913b85.json  query-4081053613c236fa708f37cff33f332ab70e3f3b9525772a02d138b0e799885d.json  query-4a6e0220eabe7590d3e62f55fb09106268e4c0843cef34413c2a51784889e80e.json  query-4d7d0195d33156f7b54ef030dba1796d733321b8fe4faf6d8d62af3094fad7fb.json  query-5547ba3e4c3fac2625482685998e37657095f409afca4a43eaaca52aa5aa361c.json  query-5fbdb61601f0ea933326886653b445d871ab1b99ec1cdfe5f19a72afb065edd8.json  query-6d961342f062df248268a7d6b7261a65152a99a51ee62dd8dec9fdd2fd480e8b.json  query-769d696fa2b2c7931c39f4adaa329e20de085e4301c7d872b0145a17c875a95e.json  query-8158dcf335d819b503049a0b71d0143e41a524177c8bfa5a685d62a3baa7c8d1.json  query-85c201df5f91790cb1ed04c20b1c9a6353d6ff489c366576b03c25d7351a9a4a.json  query-8c5f1400988adb95ea5af6ff0f8c3f5e32965d426bd1fdc026f58f5cf63c172d.json  query-907ad325f245c9583b14db07e46a3ef91f4815ca1d47f75856966153cd17ac1d.json  query-983b5f67c42b5d7ff0b84db10266507d3285430b8d84b5724e61b88f9874e1b3.json  query-9dfb5b1948cce59154c4951947c161b86787702db5af80cde09edee9d1acb56f.json  query-a3924001ba33a06381635197804f3201c01b21372f7942a8d377617ff63c8d3c.json  query-a5c6c93ed7bf58f3e0cb331de5b6bf4603d04e2b348a6d60bd94998b9b497b80.json  query-a7b125a4393862be3f2bb1c2efa6c02e2973b8929a52e4966e47ac3e4d344f6d.json  query-a7dc87a62d5f19b19cbf62f59a65f0d9e22b0312cd01779bb5d6d2930b9e494f.json  query-b1dc9c4fb4fbcf39617e8efcbbdff605011d210e4f10de9e3fc323b78cab6537.json  query-b69eb0e1ba35083ee8a3c88ff46bc1e377f4cad89bcfe8ba8d29419147d685fe.json  query-b7e5581d2440106953bd40feb9bbaf96070c7248a4e515c64f7a46eddb4892b8.json  query-bf0ae73808bd463efda6b7d904da3101807777e4086bc09a9fc4051940c72ee5.json  query-c6969dc04f3afee621e0a8e3e5cee6c37b5617fe117c30e12f85e3e7ca04c908.json  query-cdc3af6760e90d2728e33835064c591a5c9ca7ef4f58f9ebfa4913ca4ce81a39.json  query-e2d7016aff475630bad636774beed9d0e2e4511d5f51bbe66d750bb9a0cc998d.json  query-e63bc55c7075e272b834ff706a8fa6113f94f9205ff754a8cbf57b69f426e6e9.json  query-ecc69119b5e9a42322a667abe66bece529660e3909d0538ae12efd357485c7b6.json  query-ef23d299d3a9894692760347db64ba287858d55ae390abb284dc49377cb76822.json  query-ef6fb9f61086cd834cddad392d44dc245585279984b40b978b25e15f075bf0e1.json  query-f10bb4f7ca17f0c02d648ccbf2cb2573b488d5ecd64299640a4134d8e793849e.json  (+2 more)
migrations/: 0001_init.sql  0002_date_to_datetime.sql  0002_record_user_sessions.sql  0002_student_role.sql  0003_pages.sql
pages/templates/: base.html
sessions/tower-sessions/: Cargo.toml
sessions/tower-sessions-core/: Cargo.toml
sessions/tower-sessions-core/src/: lib.rs  session.rs  session_store.rs
sessions/tower-sessions/src/: lib.rs  service.rs
src/: config.rs  error.rs  lib.rs  main.rs  old_auth.rs  resources.rs  serve.rs  settings.rs
src/auth/: endpoints.rs  mod.rs  permission.rs  redis_sessions.rs  service.rs
src/resources/: category.rs  department.rs  post.rs  user.rs
src/serve/: page.rs  render.rs
src/sessions/: extract.rs  mod.rs  service.rs  session.rs  session_store.rs  store.rs
