[package]
name = "phs_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
time = { version = "0.3.22", default-features = false, features = [
    "formatting",
    "macros",
    "serde",
] }
tokio = { version = "1.38.1", features = ["full"] }
axum = { version = "0.7.5", features = ["macros", "json"] }
dotenv = "0.15.0"
serde = "1.0.204"
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time",
] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

argon2 = "0.5.3"

tower = "0.4.13"
tower-layer = "0.3.2"
tower-service = "0.3.2"

tower-sessions = "0.12.2"
tower-sessions-redis-store = "0.13.0"
tower-cookies = "0.10.0"
