[package]
name = "phs_backend"
version = "0.1.0"
edition = "2021"
authors = ["Fergus Rorke <fergusjr@proton.me>"]

[features]
default = ["signed_cookies", "ssl", "tracing_subscriber"]
ssl = ["dep:axum-server"]
signed_cookies = []
console_subscriber = ["dep:console-subscriber"]
tracing_subscriber = ["dep:tracing-subscriber"]

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
strip = true
lto = true

[dependencies]
time = { version = "0.3.36", default-features = false, features = [
    "formatting",
    "macros",
    "serde",
] }
tokio = { version = "1.38.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.11" }
axum = { version = "0.7.5", features = ["macros", "json", "multipart"] }
axum-server = { version = "0.7.1", default-features = false, features = ["tokio-rustls", "tls-rustls"], optional = true }

# Serde
serde = "1.0.204"
serde_json = "1.0.120"
serde_with = "3.10.0"
tokio-serde = { version = "0.9.0", features = ["json"] }
hex = "0.4.3"
base64 = "0.22.1"

# Stores
sqlx = { version = "0.8.1", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time",
] }
redis = { version = "0.26.1", features = ["json", "tokio-rustls"] }
deadpool-redis = "0.16.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
console-subscriber = { version = "0.4.0", optional = true }

# Cryptography
argon2 = "0.5.3"
sha2 = "0.10.8"
rand_chacha = { version = "0.3.1", features = [] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Tower
tower = "0.4.13"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-cookies = { version = "0.10.0", features = ["private", "signed"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }

# Misc
parking_lot = { version = "0.12.1", features = ["serde"] }
thiserror = "1.0.63"
dotenv = "0.15.0"
image = "0.25.2"
fast_image_resize = "4.2.1"
futures-util = "0.3.30"
tera = "1.20.0"
slugify = "0.1.0"


