[package]
name = "tower-sessions-core"
description = "Core types and traits for tower-sessions."
version = "0.12.2"
edition = "2021"
authors = ["Max Countryman <hello@maxcountryman.com>"]
license = "MIT"
homepage = "https://github.com/maxcountryman/tower-sessions"
keywords = ["axum", "session", "sessions", "cookie", "tower"]
categories = ["asynchronous", "network-programming", "web-programming"]
documentation = "https://docs.rs/tower-sessions"
readme = "README.md"

[features]
default = []
deletion-task = ["tokio/time"]

[dependencies]
async-trait.workspace = true
base64 = "0.22.0"
futures = { version = "0.3.28", default-features = false, features = [
    "async-await",
] }
http = "1.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = "1.0.107"
thiserror.workspace = true
time = { version = "0.3.29", features = ["serde"] }
tokio.workspace = true
tracing = { version = "0.1.40", features = ["log"] }
sha2.workspace = true
axum-core.workspace = true
hex.workspace = true

[dev-dependencies]
tokio-test = "0.4.3"
tokio = { workspace = true, features = ["rt", "macros"] }
mockall = "0.13.0"
