[package]
name = "tower-sessions"
description = "🥠 Sessions as a `tower` and `axum` middleware."
version = "0.12.2"
edition = "2021"
authors = ["Max Countryman <hello@maxcountryman.com>"]
license = "MIT"
homepage = "https://github.com/maxcountryman/tower-sessions"
keywords = ["axum", "session", "sessions", "cookie", "tower"]
categories = ["asynchronous", "network-programming", "web-programming"]
documentation = "https://docs.rs/tower-sessions"
readme = "README.md"

[features]
default = []
signed = ["tower-cookies/signed"]
private = ["tower-cookies/private"]

[dependencies]
async-trait = "0.1.73"
http = "1.0"
tokio = { version = "1.32.0", features = ["sync"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-sessions-core = { path = "../tower-sessions-core" }
tracing = { version = "0.1.40", features = ["log"] }
tower-cookies = "0.10.0"
time = { version = "0.3.29", features = ["serde"] }

[dev-dependencies]
async-trait = "0.1.74"
anyhow = "1"
axum = "0.7.1"
axum-core = "0.4.0"
futures = { version = "0.3.28", default-features = false, features = [
    "async-await",
] }
http = "1.0"
http-body-util = "0.1"
hyper = "1.0"
thiserror.workspace = true
reqwest = { version = "0.12.3", default-features = false, features = [
    "rustls-tls",
] }
serde = "1.0.192"
time = "0.3.30"
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
tower = "0.4.13"
tower-cookies = "0.10.0"
